--- a/wip/documentation/module-panel/index.html
+++ b/wip/documentation/module-panel/index.html
@@ -76,10 +76,14 @@
                 <br />
                 <h2 class="topic">Module Settings</h2>
                 <p>
-                    Clicking the pencil icon in the top right corner opens the Module Settings dialog. This is where you
+                    Clicking the pencil icon in the top right corner opens the Module Settings window. This is where you
                     can add/remove songs, change the number of channels, and change the tick speed.
                 </p>
-                <img src="module-panel/module_settings.png" title="The module panel" alt="The module panel" />
+                <img
+                    src="module-panel/module_settings.png"
+                    title="The module settings window"
+                    alt="The module settings window"
+                />
                 <h3 class="topic">Songs</h3>
                 <p>
                     The songs list is where you can rename, add and move songs within the module. The maximum number of
