--- a/wip/documentation/pattern-editor/index.html
+++ b/wip/documentation/pattern-editor/index.html
@@ -122,11 +122,7 @@
                 </p>
                 <p>The cursor can be moved by either clicking a new location, or using the arrow keys.</p>
                 <p>Selections can be done by either clicking or dragging, or holding shift and moving the cursor.</p>
-                <p>
-                    See
-                    <a href="keyboard-shortcuts/">keyboard shortcuts</a>
-                    for additional keyboard commands.
-                </p>
+                <p>See <a href="keyboard-shortcuts/">keyboard shortcuts</a> for additional keyboard commands.</p>
                 <footer>
                     <hr />
                     WaveTracker is Copyright © 2024 squiggythings &middot;
