--- a/wip/documentation/edit-settings/index.html
+++ b/wip/documentation/edit-settings/index.html
@@ -36,10 +36,7 @@
                 <br />
                 <p>
                     The edit settings panel is located in the top-middle of the main screen, between the
-                    <a href="wave-bank/">wave bank</a>
-                    and
-                    <a href="song-panel/">song panel</a>
-                    .
+                    <a href="wave-bank/">wave bank</a> and <a href="module-panel/">module panel</a>.
                 </p>
                 <img
                     src="edit-settings/edit_settings.png"
@@ -89,7 +86,7 @@
                 <br />
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    WaveTracker is Copyright © 2024 Elias Ananiadis &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
                     <a href="https://eliasananiadis.com">Personal site</a>
                 </footer>
