--- a/wip/documentation/module-panel/index.html
+++ b/wip/documentation/module-panel/index.html
@@ -36,7 +36,8 @@
                 <p>The module panel is located in the top right of the main screen.</p>
                 <img src="module-panel/module_panel.png" title="The module panel" alt="The module panel" />
                 <p>
-                    This panel contains information about the current file -- the song's title, author, and copyright.
+                    This panel contains information about the current file -- the module's title, author, and a dropdown
+                    containing all the songs within the module.
                 </p>
                 <p>On the right of the panel are two number boxes for the speed and frame length.</p>
                 <ul>
@@ -59,7 +60,7 @@
                         <span style="font-weight: bold">Frame Length</span>
                         <p>The number of rows in a frame. The default is 64, but this can go up to 256.</p>
                         <p>
-                            Note: the BXX, CXX, or DXX effects will cut the frame short if they are on a row prior to
+                            Note: the Bxx, Cxx, or Dxx effects will cut the frame short if they are on a row prior to
                             the end of the frame.
                         </p>
                     </li>
@@ -112,7 +113,7 @@
                 <br />
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    WaveTracker is Copyright © 2024 Elias Ananiadis &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
                     <a href="https://eliasananiadis.com">Personal site</a>
                 </footer>
