--- a/wip/documentation/preferences/index.html
+++ b/wip/documentation/preferences/index.html
@@ -41,7 +41,7 @@
                 <h2>General</h2>
                 <table border="1" cellpadding="3px" class="panel">
                     <tr valign="top">
-                        <th style="width: 230px">Setting</th>
+                        <th style="width: 240px">Setting</th>
                         <th>Description</th>
                     </tr>
                     <tr>
@@ -92,7 +92,7 @@
                 <h2>Files</h2>
                 <table border="1" cellpadding="3px" class="panel">
                     <tr valign="top">
-                        <th style="width: 230px">Setting</th>
+                        <th style="width: 240px">Setting</th>
                         <th>Description</th>
                     </tr>
                     <tr>
@@ -128,7 +128,7 @@
                 <h2>Pattern Editor</h2>
                 <table border="1" cellpadding="3px" class="panel">
                     <tr valign="top">
-                        <th style="width: 230px">Setting</th>
+                        <th style="width: 240px">Setting</th>
                         <th>Description</th>
                     </tr>
                     <tr>
@@ -195,7 +195,7 @@
                 <h2>Samples/Waves</h2>
                 <table border="1" cellpadding="3px" class="panel">
                     <tr valign="top">
-                        <th style="width: 230px">Setting</th>
+                        <th style="width: 240px">Setting</th>
                         <th>Description</th>
                     </tr>
                     <tr>
@@ -237,7 +237,7 @@
                 <h2>MIDI</h2>
                 <table border="1" cellpadding="3px" class="panel">
                     <tr valign="top">
-                        <th style="width: 230px">Setting</th>
+                        <th style="width: 240px">Setting</th>
                         <th>Description</th>
                     </tr>
                     <tr>
@@ -290,7 +290,7 @@
                 <h2>Audio</h2>
                 <table border="1" cellpadding="3px" class="panel">
                     <tr valign="top">
-                        <th style="width: 230px">Setting</th>
+                        <th style="width: 240px">Setting</th>
                         <th>Description</th>
                     </tr>
                     <tr>
@@ -324,7 +324,7 @@
                 <h2>Visualizer</h2>
                 <table border="1" cellpadding="3px" class="panel">
                     <tr valign="top">
-                        <th style="width: 230px">Setting</th>
+                        <th style="width: 240px">Setting</th>
                         <th>Description</th>
                     </tr>
                     <tr>
@@ -385,7 +385,7 @@
 
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    WaveTracker is Copyright © 2024 Elias Ananiadis &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
                     <a href="https://eliasananiadis.com">Personal site</a>
                 </footer>
