--- a/wip/documentation/visualizer-mode/index.html
+++ b/wip/documentation/visualizer-mode/index.html
@@ -84,7 +84,7 @@
                 <br />
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    WaveTracker is Copyright © 2024 Elias Ananiadis &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
                     <a href="https://eliasananiadis.com">Personal site</a>
                 </footer>
