--- a/wip/documentation/wave-bank/index.html
+++ b/wip/documentation/wave-bank/index.html
@@ -133,6 +133,7 @@
                         </td>
                     </tr>
                 </table>
+                <br />
                 <h4>Wave Modifications</h4>
                 <p>
                     The modify button offers a selection of more advanced operations to perform on the wave. These will
@@ -210,7 +211,7 @@
                 <br />
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    WaveTracker is Copyright © 2024 Elias Ananiadis &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
                     <a href="https://eliasananiadis.com">Personal site</a>
                 </footer>
