--- a/wip/documentation/index.html
+++ b/wip/documentation/index.html
@@ -33,12 +33,12 @@
                 <h1 class="topic">Overview</h1>
                 <hr />
                 <br />
-                <img src="wave_tracker.png" title="WaveTracker's main screen" alt="WaveTracker's main screen" />
                 <p>
                     This is the official documentation for
                     <a href="../">WaveTracker</a>. WaveTracker is a tracker for making chiptune music, which can then be
                     exported to .wav format.
                 </p>
+                <img src="wave_tracker.png" title="WaveTracker's main screen" alt="WaveTracker's main screen" />
                 <h2>Features</h2>
                 <ul>
                     <li>Realtime playback and editing</li>
@@ -75,7 +75,7 @@
                 <br />
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    WaveTracker is Copyright © 2024 Elias Ananiadis &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
                     <a href="https://eliasananiadis.com">Personal site</a>
                 </footer>
