--- a/wip/documentation/pattern-editor/index.html
+++ b/wip/documentation/pattern-editor/index.html
@@ -125,7 +125,7 @@
                 <p>See <a href="keyboard-shortcuts/">keyboard shortcuts</a> for additional keyboard commands.</p>
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    WaveTracker is Copyright © 2024 Elias Ananiadis &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
                     <a href="https://eliasananiadis.com">Personal site</a>
                 </footer>
