--- a/wip/documentation/toolbar/index.html
+++ b/wip/documentation/toolbar/index.html
@@ -124,7 +124,7 @@
 
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    WaveTracker is Copyright © 2024 Elias Ananiadis &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
                     <a href="https://eliasananiadis.com">Personal site</a>
                 </footer>
