--- a/wip/documentation/wave-bank/index.html
+++ b/wip/documentation/wave-bank/index.html
@@ -196,7 +196,7 @@
                     <tr>
                         <td>Mix</td>
                         <td>
-                            An mix between the harsh and smooth modes. Provides a compromise that has will make sloped
+                            A mix between the harsh and smooth modes. Provides a compromise that has will make sloped
                             sections of the wave smoother, while preserving the clarity of the sharper portions at low
                             frequencies. This is the default option for any new waves, unless otherwise changed in
                             preferences.
