--- a/wip/index.html
+++ b/wip/index.html
@@ -31,9 +31,9 @@
                 <article>
                     <h1>WaveTracker</h1>
                     <p>
-                        WaveTracker is an
+                        WaveTracker is a free and
                         <a href="https://github.com/squiggythings/WaveTracker">open source</a> chiptune music-making
-                        software for Windows. It has an easy built-in wavetable
+                        software for Windows. It uses wavetable synthesis to
                     </p>
                     <br />
                     <h2>Features</h2>
