--- a/wip/404.html
+++ b/wip/404.html
@@ -18,11 +18,11 @@
                     <a href=""><img src="logo.png" alt="WaveTracker logo" /></a>
                 </header>
                 <article>
-                    <p style="text-align: center; font-size: x-large"> Oops!</p>
-                    <p style="text-align: center; font-size: x-large"> This page does not exist.</p>
+                    <p style="text-align: center; font-size: x-large">Oops!</p>
+                    <p style="text-align: center; font-size: x-large">This page does not exist.</p>
 
                     <br />
-                    <p style="text-align: center; font-size: x-large"> <a href="index.html">[ Return home ]</a></p>
+                    <p style="text-align: center; font-size: x-large"><a href="">[ Return home ]</a></p>
                 </article>
             </div>
         </body>
