--- a/wip/index.html
+++ b/wip/index.html
@@ -33,7 +33,8 @@
                     <p>
                         WaveTracker is a free and
                         <a href="https://github.com/squiggythings/WaveTracker">open source</a> chiptune music-making
-                        software for Windows. It uses wavetable synthesis to
+                        software for Windows. It uses wavetable synthesis and sampling to generate sounds, with endless
+                        combinations of effects to warp, modify or distort waves and sounds.
                     </p>
                     <br />
                     <h2>Features</h2>
@@ -43,23 +44,27 @@
                             <h3>Drawing Waves</h3>
                             <img
                                 src="drawing_wave.gif"
-                                title="WaveTracker's main screen"
-                                alt="WaveTracker's main screen"
+                                title="Drawing a wave in the wave editor"
+                                alt="Animated image of a wave being drawn in the wave editor"
                             />
                             <p>Create up to 100 different custom waves with easy-to-use tools.</p>
                         </div>
 
                         <div class="image_wrapper">
                             <h3>Quick & Easy Editing</h3>
-                            <img src="tracking.gif" title="WaveTracker's main screen" alt="WaveTracker's main screen" />
+                            <img
+                                src="tracking.gif"
+                                title="Entering notes and effects in the pattern editor"
+                                alt="Animated image of a melody being typed into the pattern editor"
+                            />
                             <p>Use either the keyboard or a MIDI controller to quickly write chiptune music.</p>
                         </div>
                         <div class="image_wrapper">
                             <h3>Create Custom Instruments</h3>
                             <img
                                 src="envelope_editing.gif"
-                                title="WaveTracker's main screen"
-                                alt="WaveTracker's main screen"
+                                title="Editing the volume envelope of an instrument"
+                                alt="Animated image of a volume envelope being drawn in the instrument editor"
                             />
                             <p>
                                 Define up to 100 custom instrument macros with volume, arpeggio, pitch and timbre
@@ -70,8 +75,8 @@
                             <h3>Import and Edit Samples</h3>
                             <img
                                 src="importing_samples.gif"
-                                title="WaveTracker's main screen"
-                                alt="WaveTracker's main screen"
+                                title="Importing a sample into the sample editor"
+                                alt="Animated image of importing a sample into the sample editor"
                             />
                             <p>Import any .wav or .mp3 file to use in your songs.</p>
                         </div>
@@ -79,8 +84,8 @@
                             <h3>Built-in Visualizer</h3>
                             <img
                                 src="visualizer_mode.gif"
-                                title="WaveTracker's main screen"
-                                alt="WaveTracker's main screen"
+                                title="A song playing in the visualizer"
+                                alt="An animated image of a song being played in the visualizer."
                             />
                             <p>
                                 See your song with the click of a button via a built-in piano roll and oscilloscope
@@ -91,8 +96,8 @@
                             <h3>Advanced Modulation Effects</h3>
                             <img
                                 src="advanced_modulation.gif"
-                                title="WaveTracker's main screen"
-                                alt="WaveTracker's main screen"
+                                title="A wave bending and being modulated by another wave"
+                                alt="Animated image of a wave bending and being modulated by another wave"
                             />
                             <p>Stretch, blend, and modulate waves with one another.</p>
                         </div>
@@ -117,6 +122,11 @@
                         and whistles.
                         <br />
                         <br />
+                        <script type="text/javascript" src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"></script>
+                        <script type="text/javascript">
+                            kofiwidget2.init("Support Me on Ko-fi", "#6eac28", "Y8Y1ZPW0M");
+                            kofiwidget2.draw();
+                        </script>
                     </p>
                 </article>
             </div>
